[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/StoryScene.gd" type="Script" id=1]
[ext_resource path="res://assets/images/chapter_images/chaptertemp.png" type="Texture" id=2]
[ext_resource path="res://assets/images/buttons/skipbutton.png" type="Texture" id=3]
[ext_resource path="res://assets/images/buttons/nextbutton.png" type="Texture" id=4]

[node name="StoryScene" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
next_scene_path = "res://scenes/MapScene.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="Background" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 750.0
margin_bottom = 1331.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Grow Direction", "Size Flags" ]

[node name="StoryImage" type="Sprite" parent="Background" index="0"]

position = Vector2( 375.225, 362.682 )
scale = Vector2( 1.88871, 1.14197 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="StoryText" type="RichTextLabel" parent="Background" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 675.0
margin_right = 253.0
margin_bottom = 764.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "asdasd"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="SkipButton" type="TouchScreenButton" parent="Background" index="2"]

position = Vector2( 475.814, 1057.37 )
z_index = 1
normal = ExtResource( 3 )
pressed = ExtResource( 3 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Z Index" ]

[node name="NextButton" type="TouchScreenButton" parent="Background" index="3"]

position = Vector2( 475.814, 1057.37 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Z Index" ]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="pressed" from="Background/SkipButton" to="." method="_on_SkipButton_pressed"]

[connection signal="released" from="Background/NextButton" to="." method="_on_NextButton_released"]


